<resources>
    <string name="app_name">CMPE 443 Car Project Controller</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="stop">Stop</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="find_device">Find Device</string>
    <string name="status">Status</string>
    <string name="status_request">Status Request</string>
    <string name="start">Start</string>
    <string name="custom">Custom</string>
    <string name="manual_mode">Manual Mode</string>
    <string name="test_mode">(B)Test Mode</string>
    <string name="auto_mode">(A)Auto Mode</string>
</resources>
