<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:grid="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler_view_bluetooth_log"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_modes_grid_layout"
        app:layout_constraintBottom_toTopOf="@id/buttons_frame"
        app:stackFromEnd="true"
        tools:itemCount="5"
        tools:listitem="@layout/list_item_message_car" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@id/buttons_frame"/>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/main_modes_grid_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:columnCount="2"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="2">

        <Button
            android:id="@+id/main_btn_auto_mode"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_mode"
            grid:layout_columnWeight="1" />

        <Button
            android:id="@+id/main_btn_manual_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_mode"
            grid:layout_columnWeight="1" />

        <Button
            android:id="@+id/main_btn_test_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_mode"
            grid:layout_columnWeight="1" />

        <Button
            android:id="@+id/main_btn_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom"
            grid:layout_columnWeight="1" />
    </androidx.gridlayout.widget.GridLayout>


    <FrameLayout
        android:id="@+id/buttons_frame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>